implemented gmail usage verification, tests, connected asynq redis worker using Redis Queue
