# gapi/rpc_verify_email.go
@@ -1,0 +1,41 @@
+package gapi
+
+import (
+	"context"
+	db "github.com/WooDMaNbtw/BankApp/db/sqlc"
+	"github.com/WooDMaNbtw/BankApp/pb"
+	"github.com/WooDMaNbtw/BankApp/validators"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) VerifyEmail(ctx context.Context, req *pb.VerifyEmailRequest) (*pb.VerifyEmailResponse, error) {
+	// validate request arguments
+	violations := ValidateVerifyEmailRequest(req)
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
+
+	txResult, err := server.store.VerifyEmailTx(ctx, db.VerifyEmailTxParams{
+		EmailId:    req.GetEmailId(),
+		SecretCode: req.GetSecretCode(),
+	})
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to verify email")
+	}
+	response := &pb.VerifyEmailResponse{IsVerified: txResult.User.IsEmailVerified}
+	return response, nil
+}
+
+func ValidateVerifyEmailRequest(req *pb.VerifyEmailRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := validators.ValidateEmailId(req.EmailId); err != nil {
+		violations = append(violations, fieldViolation("email_id", err))
+	}
+
+	if err := validators.ValidateSecretCode(req.SecretCode); err != nil {
+		violations = append(violations, fieldViolation("secret_code", err))
+	}
+
+	return violations
+}
